--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,6 +3,38 @@
     padding: 0px;
 }
 
-body{
-    
+@import url('https://fonts.googleapis.com/css2?family=Matemasie&display=swap');
+
+
+:root{
+    --vermelho: #DC0501;
+    --vermelho-medio: #8f0200;
+    --vermelho-escuro: #4B0100;
+    --amarelo: #ffcc00;
+    --titulo: font-family: 'Matemasie', Verdana, Tahoma, sans-serif
+}
+
+
+html, body{
+    height: 100%;
+    background-image: linear-gradient(to bottom, var(--vermelho), var(--vermelho-medio));
+}
+
+header{
+    background-image:linear-gradient(to bottom,var(--vermelho-medio), var(--vermelho-escuro));
+    color: white;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title{
+    display: inline-block; 
+    font-size: 2.5em;
+}
+
+.icon-title{
+    width: 50px;
+    height: 40px;
 }
