--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,6 +48,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 #name{
@@ -83,5 +84,41 @@ header{
     font-size: 2em;
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.863);
+}
+
+.main {
+    background-color: rgba(0, 0, 0, 0.6);
+    border: 2px solid rgb(255, 255, 255, 0.7);
+    border-radius: 10px;
+    margin: auto;
+    height: 600px;
+    width: 450px;
+}
+
+.tam{
+    height: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+.default{
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 250px;
+    width:250px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text{
+    color: white;
+    font-size: 1.2em;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: justify;
 }
 
