--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,8 @@
 }
 
 
-html, body{
+body{
     background-image: linear-gradient(to bottom, var(--vermelho), var(--vermelho-medio));
-    height: 100vh;
 }
 
 header{
@@ -91,8 +90,12 @@ header{
     border: 2px solid rgb(255, 255, 255, 0.7);
     border-radius: 10px;
     margin: auto;
-    height: 100%;
+    height: 450px;
     width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .tam{
@@ -135,11 +138,11 @@ h2{
 footer{
     background-color: var(--vermelho-escuro);
     width: 100%;
-    top: 2px;
     height: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 100px;
 }
 
 footer > p {
